--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
-    <string name="app_name">CurrencyApp</string>
+    <string name="app_name">CurrencyDemoApp</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="button_detail">Details</string>
+    <string name="details_fragment">Currency details Fragment</string>
+    <string name="from">from</string>
+    <string name="to">to</string>
+    <string name="title_network_alert_dialog">No Internet</string>
+    <string name="message_network_alert_dialog"><![CDATA[Please connect with internet & try again.]]></string>
+    <string name="default_from_text">1</string>
+    <string name="please_wait">Please wait ...</string>
 </resources>
